--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "homepage": "https://shubhamessier.github.io/card",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d dist",
+    "start": "vite",
+    "build": "vite build",
+    "test": "vite test",
+    "eject": "vite eject"
   },
   "dependencies": {
     "react": "^18.2.0",
